# Oota-India-Urban-Concierge-Agent

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  submission_writeup.md
.agents/skills/india-city-navigator/: SKILL.md
.agents/skills/india-city-navigator/references/: bengaluru_geography.md
data/: migrate_nullable_itinerary.py  seed_database.py
data/cities/: __init__.py  bengaluru.py  chennai.py  delhi.py  hyderabad.py  kolkata.py  mumbai.py  pune.py
frontend/: app.js  index.html  styles.css
gateway/: telegram_bot.py  webhook_server.py
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
mcp_servers/: chroma_mcp_wrapper.py  city_data_server.py
oota_agent/: __init__.py  agent.py  memory_curator.py  prompts.py  runner.py  skill_generator.py  tools.py  workflow.py
oota_agent/.adk/: session.db
